Update File name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-School Website For pritom </title>
+    <title>E-School Website For PRITAM NATH </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/71213c6b43.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
@@ -220,7 +220,7 @@
       </div>
     </div>
     <hr>
-    <p class="copyright">Copyright ©2020 MAHI ADNAN MIM </p>
+    <p class="copyright">Copyright ©2024 PRITAM NATH </p>
   </div>
 
 </section>
